@@ -54,7 +54,7 @@ legend_key keyT = DEFAULT_KEY_PROPS;
 
 /* Description of the color box associated with CB_AXIS */
 color_box_struct color_box; /* initialized in init_color() */
-color_box_struct default_color_box = {SMCOLOR_BOX_DEFAULT, 'v', 1, LT_BLACK,
+color_box_struct default_color_box = {SMCOLOR_BOX_DEFAULT, 'v', 1, LT_BLACK, LAYER_FRONT,
 					{screen, screen, screen, 0.90, 0.2, 0.0},
 					{screen, screen, screen, 0.05, 0.6, 0.0}};
 
